fix background color

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
   margin: 0;
   font-family: "Lucida Grande";
   color: #b3aeb5;
-  background-color: #ffffff;
+  background-color: #252525;
 }
 
 a {
