--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ hr {
   font-weight: 500;
   justify-content: center;
   padding: 180px 0 100px 0;
-  background-image: url(design/hero-not-design.png);
+  background-image: url("design/hero-not-design.png");
   background-size: cover;
   text-shadow: 2px 4px 8px #000;
   border-bottom: 
