ganti img about us section

--- a/style2.css
+++ b/style2.css
@@ -92,7 +92,7 @@ div img {
 }
 
 .about-section {
-  background-image: url("https://prog-8.com/images/html/advanced/top_en.png");
+  background-image: url("buku.jpg");
   padding: 50px;
   text-align: center;
   background-color: #474e5d;
